<resources>


    <string name="My_App_Id" translatable="false">ca-app-pub-2642595516414490~6580571594</string>

    <string name="Ads_Interstitial_AddTask_UnitId" translatable="false">ca-app-pub-2642595516414490/1256253062</string>
    <string name="Ads_Interstitial_FinishTask_UnitId" translatable="false">ca-app-pub-2642595516414490/2924557951</string>

    <string name="Ads_Native_Static_UnitId" translatable="false">ca-app-pub-2642595516414490/2541414579</string>

    <string name="web_client_id" translatable="false">580610190420-ssmr98lb3rme0opoale7r16bi0oqn1gc.apps.googleusercontent.com</string>

    <!--To Do List Tasks & Planner จดบันทึกเเละวางเเผนเเต่ละวันของคุณอย่างง่าย -->
    <string name="app_name" translatable="false">GThings To Do</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>

    <!--MenuTaskFragment-->
    <string name="today">Today</string>
    <string name="other">Other</string>
    <string name="task_completed_today">Task completed today</string>
    <string name="task_pending_today">Task pending today</string>
    <string name="check_all_completed_tasks">Check all completed tasks</string>

    <!--MenuCalendarFragment-->
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tree_days_later">3 days later</string>
    <string name="sunday">Sunday</string>

    <!--MenuStatisticsFragment-->
    <string name="task_overview">Task Overview</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="pending_tasks">Pending tasks</string>
    <string name="achieve_daily_goals">Achieve Daily Goals</string>
    <string name="task_in_the_next_7_days">Task in the next 7 days</string>

    <!--Create a new category-->
    <string name="create_a_new_category">Create a new category</string>
    <string name="enter_a_category_name">Enter a category name</string>
    <string name="the_category_name_is_too_long">The category name is too long</string>

    <!--MenuMenuFragment-->
    <string name="star_task">Star Task</string>
    <string name="category">Category</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="menu">Menu</string>
    <string name="click_for_login_google">Click for login google</string>

    <!--InputTaskActivity-->
    <string name="create_new">Create New</string>
    <string name="enter_a_new_task_here">Enter a new task here.</string>
    <string name="add_subtasks">Add Sub-tasks</string>
    <string name="due_date">Due Date</string>
    <string name="time_and_notification">Time &amp; Reminder</string>
    <string name="notification_at">Reminder at</string>
    <string name="repeat_every">Repeat every</string>
    <string name="attachment">Attachment</string>
    <string name="add_task">Add Task</string>
    <string name="not_repeat">Not Repeat</string>
    <string name="no_date">No Date</string>
    <string name="enter_subtasks">Enter sub-tasks</string>
    <string name="no_category">No category</string>
    <string name="this_task_is_marked_complete">This task is marked complete</string>

    <!--SetRepeatDialog-->
    <string name="set_as_repeat_task">Set as Repeat Task</string>
    <string name="repeat_ending_at">Repeat ending at</string>
    <string name="hour">Hour</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="endlessly">Endlessly</string>
    <string name="no_loop">No loop</string>
    <string name="repeat">Repeat</string>
    <string name="please_set_a_date_first">Please set a date first</string>
    <string name="please_set_the_task_time_first">Please set the task time first</string>

    <!--SetDueDateDialog-->
    <string name="time">Time</string>
    <string name="notify">Notify</string>

    <!--SetTimeDialog-->
    <string name="set_time">Set Time</string>
    <string name="no_time">No Time</string>

    <!--ConfirmDialog-->
    <string name="delete_category">If you delete this category All task belonging to this category will be deleted. Want to delete?</string>

    <!--AuthenticationActivity-->
    <string name="login_to_collect_database">Login to collect information. and use other functions</string>
    <string name="return_to_the_menu_page">Return to the menu page</string>

    <!--CategoryActivity-->
    <string name="category_management">Category Management</string>
    <string name="categories_displayed_on_the_home_page">Categories displayed on the home page</string>
    <string name="the_category_has_been_deleted">The category has been deleted</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="Edit">Edit</string>


    <!--HistoryActivity-->
    <string name="achieve_the_goal">Achieve the goal</string>
    <string name="time_of_completion">Time of completion</string>
    <string name="clock">Clock</string>

    <!--ThemeActivity-->
    <string name="pure_color">Pure Color</string>
    <string name="tap_to_select_a_theme">Tap to select a theme.</string>

    <!--LanguageActivity-->
    <string name="choose_the_language">Choose the language</string>
    <string name="keep_going">Keep going</string>

    <!--Bottom Sheet Menu-->
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="record_sound">Record sound</string>
    <string name="attached_list">Attached list</string>

    <!--Menu in Task-->
    <string name="share">Share</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="mark_undo">Mark undo</string>

    <!--icon-->
    <string name="all">All</string>
    <string name="finance">Finance</string>
    <string name="car">Car</string>
    <string name="utilities">Utilities</string>
    <string name="family_and_children">Family and children</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="personal_use">Personal use</string>
    <string name="donate">Donate</string>
    <string name="accommodation_hotel">Accommodation-hotel</string>
    <string name="garden">Garden</string>
    <string name="shopping">Shopping</string>
    <string name="food_and_drink">Food and drink</string>
    <string name="education">Education</string>
    <string name="friends_and_lovers">Friends and lovers</string>
    <string name="sport">Sport</string>
    <string name="pet">Pet</string>
    <string name="travel">Travel</string>

    <string name="save">Save</string>
    <string name="do_you_want_to_end_this_recording">Do you want to end this recording</string>
    <string name="are_you_sure_you_want_to_delete_the_recording">Are you sure you want to delete the recording</string>

    <!--Toast -->
    <string name="please_enter_a_job">Please enter a job</string>
    <string name="successfully_added">Successfully added</string>
    <string name="canceled_successfully">Canceled successfully</string>
    <string name="category_added">Category added</string>
    <string name="add_failed">Add failed</string>
    <string name="fixed_it">Fixed it</string>
    <string name="fail">Fail</string>
    <string name="added_to_star">Added to star</string>

    <!--Other-->
    <string name="work">Work</string>
    <string name="activities_to_do">Activities to do</string>
    <string name="wish">Wish</string>

    <string name="leave">Leave</string>
    <string name="do_you_want_to_leave_the_app_now">Do you want to leave the app now?</string>
    <string name="tap_again_to_exit_see_you_again_tomorrow">Tap again to exit. see you again tomorrow</string>
    <string name="loading">Loading</string>
    <string name="you_want_to_leave_this_account">You want to leave this account?</string>
    <string name="drive">Drive</string>
    <string name="sign_out">Sign out</string>
    <string name="syncing">syncing</string>


    <string name="tap_to_record_sound">Tap to record sound</string>
    <string name="quit">Quit</string>
    <string name="do_not_have">No</string>
    <string name="have">Have</string>
    <string name="Add">Add</string>
    <string name="alert_please_upgrade_premium_version">Please upgrade to premium version.</string>

    <string name="The_work_hasbeen_synced_to_your_google_dive_account">The work has been synced to your google dive account.</string>
    <string name="Failed_to_sync_tasks_to_your_google_dive_account">Failed to sync tasks to your google dive account.</string>
    <string name="Tasks">Tasks</string>
    <string name="Calendar">Calendar</string>
    <string name="Statistics">Statistics</string>
    <string name="Menu">Menu</string>
    <string name="Work">Work</string>
    <string name="Personal_activities">Personal activities</string>
    <string name="Education">Education</string>
    <string name="Appointment">Appointment</string>
    <string name="Shopping">Shopping</string>
    <string name="Birthday">Birthday</string>
    <string name="Sync_record">Sync record</string>
    <string name="Auto_sync">Auto sync</string>
    <string name="Last_sync_time">Last sync time</string>
    <string name="Not_synced">Not synced</string>
    <string name="account_sync">Account Sync</string>
    <string name="upgrade_pro">Upgrade Pro</string>
    <string name="Select">Select</string>
    <string name="Select_Language">Select Language</string>
    <string name="It_is_recommended_to_turn_on_automatic_backup">It is recommended to turn on automatic backup.</string>
    <string name="Successfully_added_to_favorites">Successfully added to favorites</string>
    <string name="Location">Location</string>
    <string name="Every_morning_starts_a_new_page_in_your_story">Every morning starts a new page in your story!</string>
    <string name="Please_check_your_network">Please check your network.</string>
    <string name="Do_it_in_yourself">Do it in yourself!</string>
    <string name="Record_your_to_do_list_here">Record your to-do list here.</string>
    <string name="Manage_your_lifestyle_to_do_categories_here">Manage your lifestyle to-do categories here.</string>

    <string name="Set_Reminder">Set Reminder</string>
    <string name="Same_day_as_due_date">Same day as due date</string>
    <string name="five_minutes_in_advance">5 minutes in advance</string>
    <string name="ten_minutes_in_advance">10 minutes in advance</string>
    <string name="fifteen_minutes_in_advance">15 minutes in advance</string>
    <string name="thirty_minutes_in_advance">30 minutes in advance</string>
    <string name="a_day_ago">1 day ago</string>
    <string name="two_days_ago">2 days ago</string>
    <string name="Please_open_location">Please open location</string>
</resources>
