<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Set_Reminder"
                android:textColor="@color/colorBlack"
                android:padding="20dp"
                />

            <Switch
                android:id="@+id/openNotifySw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

                <CheckBox
                    android:id="@+id/chk1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Same_day_as_due_date"
                    />

                <CheckBox
                    android:id="@+id/chk2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_minutes_in_advance"
                    />

                <CheckBox
                    android:id="@+id/chk3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_minutes_in_advance"
                    />
                <CheckBox
                    android:id="@+id/chk4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen_minutes_in_advance"
                    />

                <CheckBox
                    android:id="@+id/chk5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty_minutes_in_advance"
                    />
                <CheckBox
                    android:id="@+id/chk6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_day_ago"
                    />
                <CheckBox
                    android:id="@+id/chk7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_days_ago"
                    />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/bgStateRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhiteAlpha"
                android:clickable="true"
                android:visibility="gone"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:visibility="invisible">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                >

                <TextView
                    android:id="@+id/negativeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/positiveTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/done"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>