<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_category"
            android:padding="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <LinearLayout
                android:id="@+id/chooseImageLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_radius_10_primary"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <ImageView
                    android:id="@+id/imageIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_star"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture"
                    android:textColor="?attr/colorAccent"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_radius_10_white_dark"
                    android:padding="10dp"
                    >

                    <EditText
                        android:id="@+id/nameEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:hint="@string/enter_a_category_name"
                        android:inputType="text"
                        android:textColor="@color/colorBlack"
                        android:maxLength="50"
                        android:background="@color/colorWhiteDark"
                        android:padding="10dp"
                        />

                    <TextView
                        android:id="@+id/textLengthTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="00/50"
                        android:textSize="12dp"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/warnTextLengthTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/the_category_name_is_too_long"
                    android:textColor="?attr/colorAccent"
                    />

            </LinearLayout>


        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                >

                <TextView
                    android:id="@+id/negativeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"
                    android:padding="15dp"
                    />


                <TextView
                    android:id="@+id/addTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Add"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="30dp"
                    />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>