<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemeLookActivity"
    android:background="@color/colorBlack">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/colorBlack"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            >

            <ImageView
                android:id="@+id/cancelIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_cancel_filled"
                app:tint="@color/colorWhiteDark"
                android:padding="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/useThemeCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                app:chipBackgroundColor="@color/colorBlue"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tap_to_select_a_theme"
            android:textColor="@color/colorWhite"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorThemeRCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>