<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TimePicker
                        android:id="@+id/clockTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:timePickerMode="clock"
                        android:theme="@style/CustomTimePicker"
                        />

                </RelativeLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/selectTimeCG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                </com.google.android.material.chip.ChipGroup>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/negativeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="15dp"
                    android:text="@string/cancel"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/positiveTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="15dp"
                    android:text="@string/done"
                    android:textColor="?attr/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>